History
=======
3.19 (UNRELEASED)
- typo in Release Date description
  [spanky]

3.18 (2011-10-21)
- subhead field must not be languageIndependent - there
  is no need why the subheading should not be translatable
  [ajung]

3.17 (2011-08-29)
 - Use a separate add permission for each type, and grant them to the Site
   Administrator role by default. [davisagli]

3.16 (2011-05-05)
 - use archetypes.referencebrowserwidget if available [ajung]

3.15 (2011-04-19)
 - general cleanup of the uninstall code [ajung]

3.14 (2011-04-08)
 - fixed improper return statement in Extensions/utils.py [ajung]

3.13 (2010-10-22)
 - Replace the description field of press contacts with a rich-text text
   field.  The old description is still used if no text is set.
   [davisagli]

3.12 (2010-10-19)
 - Fix some improper TAL. [jbaldivieso]

3.11 (2010-09-21)
 - Fix normalizeString usage in Plone 3. [davisagli]

3.10 (2010-09-16)
 - Avoid running the final import step except as part of the PressRoom
   profile. [davisagli]

3.9 (2010-??-??)
 - Made folder_listing_pressroom template Plone 4 compatible. [yomatters]

3.8 (2010-07-23)
 - Made Press Room draw on collections for content. [yomatters]

3.7 (2010-07-16)
 - Fixed invalid TAL. [davisagli]

3.6 (2010-07-16)
 - Use a forward-compatible way of checking isViewTemplate. [davisagli]

3.5 (2010-07-16)
 - Use context.portal_workflow instead of wtool in templates. [davisagli]

3.4 (2010-07-16)
 - Fix some missing global variables in Plone 4. [davisagli]

3.3 (2010-03-09)
 - Make PressRoom compatible with Plone 4, TinyMCE. [nvasseur, davisagli]

3.2-final
 - Fixed handling of the PressRoom add permission for contributors and in
   the main pressroom view shortcut links. [davisagli]
 - Fixed a Unicode bug in vCard download [naro]
 - more translation work [naro, tabacha]

3.2-beta-2
 - Fixed the German translations to really be German. [jbaldivieso]

3.2-beta-1
 - Switched to Large Plone Folders for storing Press Releases and Clips. Provided